--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-dom": "^19.2.3",
     "react-router-dom": "^7.11.0",
     "recharts": "^3.6.0",
-    "use-sound": "^5.0.0",
+    "tone": "^15.1.22",
     "xlsx": "^0.18.5",
     "zod": "^4.3.5",
     "zustand": "^5.0.9"
